fix(blazorui): resolve alignment issues of the link button #5922 (#5925)

--- a/src/BlazorUI/Bit.BlazorUI/Components/Buttons/BitButton/BitButton.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Buttons/BitButton/BitButton.scss
@@ -13,6 +13,8 @@
     border-radius: $shape-border-radius;
     font-family: $typography-font-family;
     font-weight: $typography-font-weight;
+    display: inline-flex;
+    align-items: center;
 
     &.bit-dis {
         cursor: default;
